--- a/GlucoMan_Mobile/GlucoMan_Mobile/WeighFood_Page.xaml
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/WeighFood_Page.xaml
@@ -4,11 +4,61 @@
              x:Class="GlucoMan_Mobile.WeighFood_Page"
              Title="Weighing to calculate CHO">
     <ContentPage.Content>
-        <StackLayout>
-            <!--<Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-                <Label Text="Hypoglicemia time prediction" HorizontalTextAlignment="Center" TextColor="White" FontSize="25"/>
-            </Frame>-->
-            <Label Text="Target glucose for Hypo" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" />
-        </StackLayout>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35"/>
+                <RowDefinition />
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition />
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.ColumnSpan="5" Text="Weigh food to calculate CHO. Returns cooked food's weight to raw" VerticalOptions="CenterAndExpand" HorizontalOptions="Start" />
+
+            <Button Grid.Row="1" Grid.Column="3" Text="Calc"
+                    Clicked="btnCalc_Click"></Button>
+            <Button Grid.Row="1" Grid.Column="0" 
+                    Text="XXXX"></Button>
+            <Button Grid.Row="1" Grid.Column="1" 
+                    Text="XXXX"></Button>
+            
+            <Label Grid.Row="2" Grid.ColumnSpan="5" Text="Data before cooking (for ALL the  portions)" 
+                    XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="3" Grid.ColumnSpan="5" Text="Raw main food (all portions)" 
+                    XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="4" Grid.Column="0" Text="Gross weight" XAlign="Center" YAlign="End"/>
+            <Entry Grid.Row="5" Grid.Column="0" x:Name="TxtM0MainRawGross" HorizontalTextAlignment ="End" Text="" 
+                   Unfocused="TxtM0MainRawGross_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
+            <Label Grid.Row="4" Grid.Column="1" Text="Container weight" XAlign="Center" YAlign="End" />
+            <Entry Grid.Row="5" Grid.Column="1" x:Name="TxtM0MainRawTare" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtM0MainRawTare_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
+            <Label Grid.Row="4" Grid.Column="2" Text="Net weight" XAlign="Center" YAlign="End" />
+            <Entry Grid.Row="5" Grid.Column="2" x:Name="TxtM0MainRawNet" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtM0MainRawNet_Leave"  Placeholder="[g]" BackgroundColor="PaleGreen" />
+
+            <Label Grid.Row="6" Grid.ColumnSpan="5" Text="Sauce (ALL already cooked)" 
+                    XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="7" Grid.ColumnSpan="5" Text="Raw main food (all portions)" 
+                    XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="8" Grid.Column="0" Text="Gross weight" XAlign="Center" YAlign="End"/>
+            <Entry Grid.Row="9" Grid.Column="0" x:Name="TxtS1SauceGross" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtS1SauceGross_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
+            <Label Grid.Row="8" Grid.Column="1" Text="Tare" XAlign="Center" YAlign="End" />
+            <Entry Grid.Row="9" Grid.Column="1" x:Name="TxtS1SauceTare" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtS1SauceTare_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
+            <Label Grid.Row="8" Grid.Column="2" Text="Net weight" XAlign="Center" YAlign="End" />
+            <Entry Grid.Row="9" Grid.Column="2" x:Name="TxtS1SauceNet" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtS1SauceNet_Leave" Placeholder="[g]" BackgroundColor="PaleGreen" />
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
