--- a/GlucoMan_Mobile/GlucoMan_Mobile/WeighFood_Page.xaml
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/WeighFood_Page.xaml
@@ -14,6 +14,8 @@
                 <RowDefinition />
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="20"/>
+                <RowDefinition />
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition />
             </Grid.RowDefinitions>
@@ -36,29 +38,45 @@
                     XAlign="Center" YAlign="End"/>
             <Label Grid.Row="3" Grid.ColumnSpan="5" Text="Raw main food (all portions)" 
                     XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="4" Grid.Column="0" Text="Gross weight" XAlign="Center" YAlign="End"/>
-            <Entry Grid.Row="5" Grid.Column="0" x:Name="TxtM0MainRawGross" HorizontalTextAlignment ="End" Text="" 
-                   Unfocused="TxtM0MainRawGross_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
+            <Label Grid.Row="4" Grid.Column="0" Text="Gross weight" 
+                   XAlign="Center" YAlign="End"/>
+            <Entry Grid.Row="5" Grid.Column="0" x:Name="TxtM0RawGross" 
+                   HorizontalTextAlignment ="End" Text="" 
+                   Unfocused="TxtM0RawGross_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
             <Label Grid.Row="4" Grid.Column="1" Text="Container weight" XAlign="Center" YAlign="End" />
-            <Entry Grid.Row="5" Grid.Column="1" x:Name="TxtM0MainRawTare" HorizontalTextAlignment ="End" Text="" 
-                       Unfocused="TxtM0MainRawTare_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
+            <Entry Grid.Row="5" Grid.Column="1" x:Name="TxtM0RawTare" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtM0RawTare_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
             <Label Grid.Row="4" Grid.Column="2" Text="Net weight" XAlign="Center" YAlign="End" />
-            <Entry Grid.Row="5" Grid.Column="2" x:Name="TxtM0MainRawNet" HorizontalTextAlignment ="End" Text="" 
-                       Unfocused="TxtM0MainRawNet_Leave"  Placeholder="[g]" BackgroundColor="PaleGreen" />
+            <Entry Grid.Row="5" Grid.Column="2" x:Name="TxtM0RawNet" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtM0RawNet_Leave"  Placeholder="[g]" BackgroundColor="PaleGreen" />
 
             <Label Grid.Row="6" Grid.ColumnSpan="5" Text="Sauce (ALL already cooked)" 
                     XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="7" Grid.ColumnSpan="5" Text="Raw main food (all portions)" 
-                    XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="8" Grid.Column="0" Text="Gross weight" XAlign="Center" YAlign="End"/>
-            <Entry Grid.Row="9" Grid.Column="0" x:Name="TxtS1SauceGross" HorizontalTextAlignment ="End" Text="" 
+            <Label Grid.Row="7" Grid.Column="0" Text="Gross weight" XAlign="Center" YAlign="End"/>
+            <Entry Grid.Row="8" Grid.Column="0" x:Name="TxtS1SauceGross" HorizontalTextAlignment ="End" Text="" 
                        Unfocused="TxtS1SauceGross_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
-            <Label Grid.Row="8" Grid.Column="1" Text="Tare" XAlign="Center" YAlign="End" />
-            <Entry Grid.Row="9" Grid.Column="1" x:Name="TxtS1SauceTare" HorizontalTextAlignment ="End" Text="" 
+            <Label Grid.Row="7" Grid.Column="1" Text="Tare" XAlign="Center" YAlign="End" />
+            <Entry Grid.Row="8" Grid.Column="1" x:Name="TxtS1SauceTare" HorizontalTextAlignment ="End" Text="" 
                        Unfocused="TxtS1SauceTare_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
-            <Label Grid.Row="8" Grid.Column="2" Text="Net weight" XAlign="Center" YAlign="End" />
-            <Entry Grid.Row="9" Grid.Column="2" x:Name="TxtS1SauceNet" HorizontalTextAlignment ="End" Text="" 
+            <Label Grid.Row="7" Grid.Column="2" Text="Net weight" XAlign="Center" YAlign="End" />
+            <Entry Grid.Row="8" Grid.Column="2" x:Name="TxtS1SauceNet" HorizontalTextAlignment ="End" Text="" 
                        Unfocused="TxtS1SauceNet_Leave" Placeholder="[g]" BackgroundColor="PaleGreen" />
+
+            <Label Grid.Row="9" Grid.ColumnSpan="5" Text="Total course before cooking" 
+                    XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="10" Grid.Column="0" Text="Gross weight" XAlign="Center" YAlign="End"/>
+            <!--<Entry Grid.Row="11" Grid.Column="0" x:Name="TxtT0RawGross" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtT0RawGross_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
+            <Label Grid.Row="10" Grid.Column="1" Text="Tare" XAlign="Center" YAlign="End" />
+            <Entry Grid.Row="11" Grid.Column="1" x:Name="TxtT0RawTare" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtT0RawTare_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
+            <Label Grid.Row="10" Grid.Column="2" Text="Sauce+T." XAlign="Center" YAlign="End" />
+            <Entry Grid.Row="11" Grid.Column="2" x:Name="TxtT0SaucePlusTare" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtT0SaucePlusTare_Leave" Placeholder="[g]" BackgroundColor="PaleGoldenrod" />
+            <Label Grid.Row="10" Grid.Column="3" Text="Net weight" XAlign="Center" YAlign="End" />
+            <Entry Grid.Row="11" Grid.Column="3" x:Name="TxtT0RawNet" HorizontalTextAlignment ="End" Text="" 
+                       Unfocused="TxtT0RawNet_Leave" Placeholder="[g]" BackgroundColor="PaleGreen" />-->
+
         </Grid>
     </ContentPage.Content>
 </ContentPage>
