v.0.2.2.0 Arrotondamento del valore di insulina da fare in frmInsulineCalc. Lettura da altra finestra del valore del glucosio target in frmFoodToHitTargetCarbs. Aggiustamento di parti di frmPredictHypo per farlo funzionare con Android (commentato il codice dell'allarme in WinForms).  Modifiche di dettaglio nelle UI.

--- a/GlucoMan_Mobile/GlucoMan_Mobile/FoodToHitTargetCarbs_Page.xaml
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/FoodToHitTargetCarbs_Page.xaml
@@ -24,6 +24,8 @@
             <Label Text="Food to eat to hit target CHO [g]" XAlign="Center" YAlign="End"/>
             <Entry x:Name="TxtFoodToHitTarget" Text="" 
                    Margin="30,0,30,0" Placeholder="[g]" HorizontalTextAlignment ="End" BackgroundColor="SkyBlue" />
+            <Button x:Name="btnReadTarget" Text="Read Target CHO" 
+                   Margin="30,0,30,0" Clicked="btnReadTarget_Click" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
