--- a/GlucoMan_Mobile/GlucoMan_Mobile/InsulineCalc_Page.xaml
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/InsulineCalc_Page.xaml
@@ -27,14 +27,14 @@
             </Grid.ColumnDefinitions>
             <Label x:Name="tempText" Grid.Row="0" Grid.ColumnSpan="4" Text="Ratio CHO / insuline (from dietist)" 
                    XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="1" Grid.Column="0" Text="morning" XAlign="Center" YAlign="End" />
-            <Label Grid.Row="1" Grid.Column="1" Text="midday" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="1" Grid.Column="2" Text="evening" XAlign="Center" YAlign="End"/>
-            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtRatioMorning" Text="" 
+            <Label Grid.Row="1" Grid.Column="0" Text="Breakfast" XAlign="Center" YAlign="End" />
+            <Label Grid.Row="1" Grid.Column="1" Text="Lunch" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="1" Grid.Column="2" Text="Dinner" XAlign="Center" YAlign="End"/>
+            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtChoInsulineRatioBreakfast" Text="" 
                    Placeholder="morn.ratio" HorizontalTextAlignment ="End" BackgroundColor="PaleGreen" />
-            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtRatioMidday" Text="" 
+            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtChoInsulineRatioLunch" Text="" 
                    Placeholder="mid.ratio" HorizontalTextAlignment ="End" BackgroundColor="PaleGreen" />
-            <Entry Grid.Row="2" Grid.Column="2" x:Name="txtRatioEvening" Text="" 
+            <Entry Grid.Row="2" Grid.Column="2" x:Name="txtChoInsulineRatioDinner" Text="" 
                    Placeholder="eve.ratio" HorizontalTextAlignment ="End" BackgroundColor="PaleGreen" />
             <Button Grid.Row="2" Grid.Column="3" x:Name="btnCalc" Text="Calc" 
                    Clicked="btnCalc_Click" />
@@ -53,16 +53,26 @@
             <Entry Grid.Row="5" Grid.Column="3" x:Name="txtTypicalBolusNight" Text="" 
                    Placeholder="eve.ratio" HorizontalTextAlignment ="End" BackgroundColor="PaleGreen" />
             <Label Grid.Row="6" Grid.Column="0" Text="TDD" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="6" Grid.Column="1" Text="Sens.1500" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="6" Grid.Column="3" Text="Sens.1800" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="6" Grid.Column="1" Text="Sens.factor" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="6" Grid.Column="3" Text="Sens.to insul." XAlign="Center" YAlign="End"/>
             <Label Grid.Row="7" Grid.Column="0" x:Name="txtTdd" Text="XXXX" XAlign="Center" YAlign="Center"/>
-            <Label Grid.Row="7" Grid.Column="1" x:Name="txtSensitivity1500" Text="XXXX" XAlign="Center" YAlign="Center"/>
-            <Label Grid.Row="7" Grid.Column="3" x:Name="txtSensitivity1800" Text="XXXX" 
-                   XAlign="Center" YAlign="Center"/>
+            <Picker Grid.Row="7" Grid.Column="1" x:Name="cmbSensitivityFactor" Title="pick or write" TitleColor="Red">
+                <Picker.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                        <x:String>1800</x:String>
+                        <x:String>1500</x:String>
+                        <x:String>1400</x:String>
+                </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
+            <Entry  Grid.Row="7" Grid.Column="2" x:Name="txtInsulineSensitivity" HorizontalTextAlignment ="End" Text="" 
+                   Placeholder="mg/dl" BackgroundColor="PaleGoldenrod"/>
+            <Button Grid.Row="7" Grid.Column="3" x:Name="btnInsulineSensitivityCalculation" Text="Calc"/>
             <Label Grid.Row="8" Grid.Column="0" Text="Premeal Gluc" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="8" Grid.Column="1" Text="Target Gluc" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="8" Grid.Column="2" Text="Gl. to correct" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="8" Grid.Column="3" Text="CHO to eat" XAlign="Center" YAlign="End"/>
+            
             <Entry Grid.Row="9" Grid.Column="0" HorizontalTextAlignment ="End" x:Name="txtGlucoseBeforeMeal" Text="" 
                    Placeholder="mg/dl" BackgroundColor="GreenYellow" />
             <Entry Grid.Row="9" Grid.Column="1" HorizontalTextAlignment ="End" x:Name="txtTargetGlucose" Text="mg/dl" 
@@ -82,18 +92,40 @@
             </Grid>
             <Entry Grid.Row="9" Grid.Column="3" x:Name="txtChoToEat" Text="" 
                    Placeholder="g" HorizontalTextAlignment ="End" BackgroundColor="GreenYellow" />
-            <Label Grid.Row="10" Grid.Column="0" Text="Corr.insuline" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="10" Grid.Column="1" Text="Breakfast" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="10" Grid.Column="2" Text="lunch" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="10" Grid.Column="3" Text="dinner" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="11" Grid.Column="0" x:Name="txtCorrectionInsuline" Text="XXXX" 
+
+            <Button Grid.Row="10" Grid.Column="0"  Text="Read" 
+                        x:Name="btnReadGlucose" Clicked="btnReadGlucose_Click" />
+            <Grid Grid.Row="10" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="18"/>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Text="Type of meal" XAlign="Center" YAlign="Center"/>
+                <RadioButton Grid.Row="1" Grid.Column="0" Content="breakfast" x:Name="rdbIsBreakfast" />
+                <RadioButton Grid.Row="1" Grid.Column="1" Content="lunch" x:Name="rdbIsLunch" />
+                <RadioButton Grid.Row="1" Grid.Column="2" Content="dinner" x:Name="rdbIsDinner" />
+                <RadioButton Grid.Row="1" Grid.Column="3" Content="snack" x:Name="rdbIsSnack" />
+            </Grid>
+
+            <Label Grid.Row="11" Grid.Column="0" Text="Corr.insuline" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="11" Grid.Column="1" Text="CHO ins." XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="11" Grid.Column="2" Text="Total bolus" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="11" Grid.Column="3" Text="dinner" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="12" Grid.Column="0" x:Name="txtCorrectionInsuline" Text="XXXX" 
                    XAlign="Center" YAlign="Center" FontSize="Large" BackgroundColor="CadetBlue" />
-            <Label Grid.Row="11" Grid.Column="1" x:Name="txtTotalChoBreakfast" Text="XXXX" 
+            <Label Grid.Row="12" Grid.Column="1" x:Name="txtChoInsulineMeal" Text="XXXX" 
                    XAlign="Center" YAlign="Center" FontSize="Large" BackgroundColor="SkyBlue"/>
-            <Label Grid.Row="11" Grid.Column="2" x:Name="txtTotalChoLunch" Text="XXXX" 
+            <Label Grid.Row="12" Grid.Column="2" x:Name="txtTotalChoLunch" Text="XXXX" 
                    XAlign="Center" YAlign="Center" FontSize="Large" BackgroundColor="LightBlue" />
-            <Label Grid.Row="11" Grid.Column="3" x:Name="txtTotalChoDinner" 
+            <Label Grid.Row="12" Grid.Column="3" x:Name="txtTotalInsuline" 
                    Text="XXXX" XAlign="Center" YAlign="Center" FontSize="Large" BackgroundColor="DeepSkyBlue"/>
+            <Label Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="3" x:Name="txtStatusBar" 
+                   Text="" XAlign="Start" YAlign="Center" FontSize="Large"/>
+            <Button Grid.Row="13" Grid.Column="4"  Text="Save" 
+                        x:Name="btnSaveBolus" Clicked="btnSaveBolus_Click" />
         </Grid>
     </ContentPage.Content>
 </ContentPage>
