--- a/GlucoMan_Mobile/GlucoMan_Mobile/GlucoseMeasurement_Page.xaml
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/GlucoseMeasurement_Page.xaml
@@ -8,14 +8,11 @@
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
+                <RowDefinition />
+                
+                <RowDefinition Height="100"/>
                 <RowDefinition />
                 <RowDefinition />
-                <RowDefinition />
-                <RowDefinition Height="20"/>
-                <RowDefinition />
-                <RowDefinition Height="20"/>
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
@@ -32,8 +29,8 @@
             <Entry Grid.Row="1" Grid.Column="0" x:Name="txtGlucose" Text="80" 
                     HorizontalTextAlignment="End" BackgroundColor="PaleGoldenrod"
                    IsEnabled="true"/>
-            <DatePicker Grid.Row="1" Grid.Column="1" x:Name="dtpEventDate"/>
-            <TimePicker Grid.Row="1" Grid.Column="2" x:Name="dtpEventTime"/>
+            <DatePicker Grid.Row="1" Grid.Column="1" x:Name="dtpEventDate" Format="yyyy-MM-dd HH:mm:ss"/>
+            <TimePicker Grid.Row="1" Grid.Column="2" x:Name="dtpEventTime" Format="HH:mm:ss"/>
             <Button Grid.Row="1" Grid.Column="3" Text="-" x:Name="btnRemoveMeasurement" Clicked="btnRemoveMeasurement_Click"></Button>
             <StackLayout Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
                 <CheckBox VerticalOptions="Start" x:Name="chkNowInAdd" IsChecked="True">
@@ -70,6 +67,7 @@
                     </Label.GestureRecognizers>
                 </Label>
             </StackLayout>
+            <ListView Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" x:Name="viewMeasurements"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
