--- a/GlucoMan_Mobile/GlucoMan_Mobile/InsulinCalc_Page.xaml
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/InsulinCalc_Page.xaml
@@ -70,7 +70,7 @@
             <Entry  Grid.Row="7" Grid.Column="2" x:Name="txtInsulinSensitivity" HorizontalTextAlignment ="End" Text="" 
                    Placeholder="mg/dl" BackgroundColor="PaleGoldenrod"/>
             <Button Grid.Row="7" Grid.Column="3" x:Name="btnInsulinSensitivityCalculation" Text="Calc"
-                    Clicked="btnInsulineSensitivityCalculation_Click"/>
+                    Clicked="btnInsulinSensitivityCalculation_Click"/>
             <Label Grid.Row="8" Grid.Column="0" Text="Premeal Gluc" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="8" Grid.Column="1" Text="Target Gluc" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="8" Grid.Column="2" Text="Gl. to correct" XAlign="Center" YAlign="End"/>
@@ -103,7 +103,7 @@
             <Label Grid.Row="13" Grid.Column="1" Text="CHO ins." XAlign="Center" YAlign="End"/>
             <Label Grid.Row="13" Grid.Column="2" Text="Total bolus" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="13" Grid.Column="3" Text="dinner" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="14" Grid.Column="0" x:Name="txtCorrectionInsuline" Text="----" 
+            <Label Grid.Row="14" Grid.Column="0" x:Name="txtCorrectionInsulin" Text="----" 
                    XAlign="Center" YAlign="Center" FontSize="Large" BackgroundColor="CadetBlue" />
             <Label Grid.Row="14" Grid.Column="1" x:Name="txtChoInsulinMeal" Text="----" 
                    XAlign="Center" YAlign="Center" FontSize="Large" BackgroundColor="SkyBlue"/>
