--- a/GlucoMan_Mobile/GlucoMan_Mobile/MainPage.xaml
+++ b/GlucoMan_Mobile/GlucoMan_Mobile/MainPage.xaml
@@ -2,16 +2,17 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan_Mobile.MainPage">
-    <StackLayout>
+    <StackLayout Spacing="0">
         <Frame BackgroundColor="#2196F3" Padding="0" CornerRadius="0">
-            <Label x:Name="lblAppName" Text="GlucoMan " HorizontalTextAlignment="Center" TextColor="White" FontSize="32"/>
+            <Label x:Name="lblAppName" Text="GlucoMan " HorizontalTextAlignment="Center" VerticalTextAlignment="Start" 
+                   TextColor="White" FontSize="32"/>
         </Frame>
-        <Label Text="GlucoMan will be a Glucose Manager program for diabetic person. " FontSize="15" Padding="30,10,30,0"/>
+        <Label Text="GlucoMan will be a Glucose Manager program for the diabetic person. " FontSize="15" Padding="30,0,30,0"/>
         <Label Text="Currently it makes just a few calculations, but very useful to the diabetic person that has to make carbohydrate count. I will expand the program in the future, including full management of insulin and carboihydrates." FontSize="13" Padding="30,0,30,0"/>
-        <Label Text="Here are the first functions I implemented: " FontSize="13" Padding="30,5,30,0"/>
+        <Label Text="Here are the first functions I implemented: " FontSize="13" Padding="30,0,30,0"/>
         <Button x:Name="btnGlucoseMeasurement" Text="Glucose" Clicked="btnGlucoseMeasurement_Clicked"
                 Margin="15,0,15,0"></Button>
-        <Button x:Name="btnChoCount" Text="Meal" Clicked="btnGlucoseMeasurement_Clicked"
+        <Button x:Name="btnChoCount" Text="Meal" 
                 Margin="15,0,15,0"></Button>
         <Button x:Name="btnWeighFood" Text="Weigh Food" Clicked="btnWeighFood_Clicked"
                 Margin="15,0,15,0"></Button>
@@ -23,7 +24,7 @@
                 Margin="15,0,15,0"></Button>
         <Button x:Name="btnHypoPrediction" Text="Hypoglicemia time prediction" Clicked="btnHypoPrediction_Clicked"
                 Margin="15,0,15,0"></Button>
-        <Button x:Name="btnAlarms" Text="Alarm" Clicked="btnHypoPrediction_Clicked"
+        <Button x:Name="btnAlarms" Text="Alarm" 
                 Margin="15,0,15,0"></Button>
         <Label Text="GlucoMan is Free Software by:" FontSize="14" Padding="30,0,30,0"/>
         <Label Text="Ing.Gabriele Monti (gamon) - Forlì - Italia" FontSize="14" Padding="30,0,30,0"/>
