Saving in Android working in emulator! Logging with Logger class now operating. Refactoring: brought in this branch the modifications of recent dead branches; changed name to SharedGeneral from SharedProject. Simplified namespaces: now Common comprises a few former namespaces.

--- a/GlucoMan.Mobile/GlucoMan.Mobile/GlucoseMeasurementPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/GlucoseMeasurementPage.xaml
@@ -67,7 +67,7 @@
                     </Label.GestureRecognizers>
                 </Label>
             </StackLayout>
-            <ListView Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" x:Name="viewMeasurements"/>
+            <ListView Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" x:Name="gridMeasurements"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
