v.0.5.0 Adjusted glucose recording with flat text "database", both in WinForms and Xamarin. The grids in GlucoseMeasurement load but don't show the data.  Some tests left todo.

--- a/GlucoMan.Mobile/GlucoMan.Mobile/HypoPredictionPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/HypoPredictionPage.xaml
@@ -85,7 +85,7 @@
                    YAlign="Center" XAlign="Center" BackgroundColor="SkyBlue"/>
             <Button Grid.Row="11" IsVisible="false" Grid.Column="3" 
                     Clicked="btnAlarm_Click" Text="Alarm"></Button>
-            <Label Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtStatusBar" Text="" FontSize="Large"
+            <Label Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtStatusBar" Text="" FontSize="Small"
                    YAlign="Center" XAlign="Center"/>
         </Grid>
     </ContentPage.Content>
