--- a/GlucoMan.Mobile/GlucoMan.Mobile/GlucoseMeasurementPage.xaml
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/GlucoseMeasurementPage.xaml
@@ -7,7 +7,7 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
+                <RowDefinition Height="60"/>
                 <RowDefinition Height="30"/>
                 <RowDefinition Height="45"/>
                 <RowDefinition Height="20"/>
@@ -23,12 +23,12 @@
             <Label Grid.Row="0" Grid.Column="1" Text="Date" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="0" Grid.Column="2" Text="Time" XAlign="Center" YAlign="End"/>
             <Label Grid.Row="0" Grid.Column="3" Text="Id" XAlign="Center" YAlign="End"/>
-            <Entry Grid.Row="1" Grid.Column="0" x:Name="txtGlucose" Text="" 
+            <Entry Grid.Row="1" Grid.Column="0" x:Name="txtGlucose" Text="" FontSize="Large"
                     HorizontalTextAlignment="End" BackgroundColor="Lime"
                    IsEnabled="true"/>
             <DatePicker Grid.Row="1" Grid.Column="1" x:Name="dtpEventDate" BackgroundColor="PaleGreen" Format="yyyy-MM-dd HH:mm:ss"/>
             <TimePicker Grid.Row="1" Grid.Column="2" x:Name="dtpEventTime" BackgroundColor="PaleGreen" Format="HH:mm:ss"/>
-            <Label Grid.Row="1" Grid.Column="3" x:Name="txtIdGlucoseRecord" IsEnabled="False" Text="" XAlign="Center" YAlign="Center"/>
+            <Label Grid.Row="1" Grid.Column="3" x:Name="txtIdGlucoseRecord" Text="" XAlign="Center" YAlign="Center"/>
             <!-- check box with associated label into a StackLayout -->
             <StackLayout Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
                 <CheckBox VerticalOptions="Start" x:Name="chkNowInAdd" IsChecked="True">
@@ -70,9 +70,9 @@
             <Button Grid.Row="3" Grid.Column="1" Text="-" x:Name="btnRemoveMeasurement" Clicked="btnRemoveMeasurement_Click"></Button>
             <Button Grid.Row="3" Grid.Column="2" Text="Now" x:Name="btnNow" Clicked="btnNow_Click"></Button>
             <Button Grid.Row="3" Grid.Column="3" Text="Save" x:Name="btnSave" Clicked="btnSave_Click"></Button>
-            <Label Grid.Row="4" Grid.Column="0" Text="Time" XAlign="Center" YAlign="End"/>
-            <Label Grid.Row="4" Grid.Column="1" Text="Glucose" XAlign="Center" YAlign="End"/>
-            <ListView x:Name="gridMeasurements" Grid.Row="5" ItemsSource="{Binding}"
+            <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="Time" XAlign="Center" YAlign="End"/>
+            <Label Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Text="Glucose" XAlign="Center" YAlign="End"/>
+            <ListView Grid.Row="5" Grid.ColumnSpan="4" x:Name="gridMeasurements" ItemsSource="{Binding}"
                       ItemSelected="OnSelection" >
                 <!-- description of data to be shown, in a DataTemplate -->
                 <ListView.ItemTemplate>
@@ -83,10 +83,10 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="18"/>
                                     </Grid.RowDefinitions>
-                                    <Label Grid.Row="0" Grid.Column="0" Text="Time:" WidthRequest="15"/>
-                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding Timestamp}"/>
-                                    <Label Grid.Row="0" Grid.Column="2" Text="Glucose:"/>
-                                    <Label Grid.Row="0" Grid.Column="0" Text="{Binding GlucoseValue}"/>
+                                    <Label Grid.Column="0" Text="Time:" />
+                                    <Label Grid.Column="1" Text="{Binding Timestamp}"/>
+                                    <Label Grid.Column="2" Text="Glucose:"/>
+                                    <Label Grid.Column="0" Text="{Binding GlucoseValue}"/>
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
